<package>
  <name>rviz_camera_pub</name>
  <version>0.0.1</version>
  <description>
    Modified RViz camera plugin.
    Allows to output the rviz display view as an Image topic.
  </description>

  <maintainer email="liuzjmike@gmail.com">Mike Liu</maintainer>
  <author email="tbd@tbd.com">Mikhail Medvedev</author>

  <license>BSD</license>

  <url type="website">https://github.com/liuzjmike/rviz_camera_pub</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>ogre</build_depend>
  <build_depend>ogre_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
